fixed word break on terminal result print

--- a/src/components/dlc-cssterminal-block/dlc-cssterminal-block.scss
+++ b/src/components/dlc-cssterminal-block/dlc-cssterminal-block.scss
@@ -100,6 +100,7 @@ $typewriter-animation-index: 1.5;
   
   &__content-print {
     color: $terminal-secondary-font-color;
+    word-break: break-word;
   }
   
   /**
